...
                        }.distinct(),
                    ) + "."
            }
    }
    is CoroutinePuzzleSolutionResult.CustomFailure -> message
    CoroutinePuzzleSolutionResult.FullyQuiescent -> "All coroutines got stuck waiting for each other."
    CoroutinePuzzleSolutionResult.Success -> "The puzzle was solved"
}

context(clientMetadata: ClientMetadata)
private fun CoroutinePuzzleExpectedFollowup.expectedActionDescription(): String = when {
    // TODO: Check cancellation reporting for flow cancellation.
    expectedCancellationOfCallId != null -> "Cancel ${clientMetadata.descriptionFor(endPoint)}"
...
